[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/kenney/kenney_items/genericItem_color_001.png" type="Texture" id=1]
[ext_resource path="res://src/level/UpgradeButton.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/click1.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/kenney/kenney_fontpackage/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/kenney/kenney_fontpackage/Fonts/Kenney Future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/kenney/uipack_fixed/PNG/green_button07.png" type="Texture" id=6]
[ext_resource path="res://assets/kenney/uipack_fixed/PNG/blue_panel.png" type="Texture" id=7]
[ext_resource path="res://assets/kenney/uipack_fixed/PNG/yellow_button00.png" type="Texture" id=8]
[ext_resource path="res://assets/kenney/uipack_fixed/PNG/blue_button00.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 190, 49 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 10.0

[sub_resource type="DynamicFont" id=2]
size = 14
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 10
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 10
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="UpgradeButton" type="Button"]
anchor_right = 0.098
anchor_bottom = 0.333
margin_right = -0.352005
margin_bottom = 0.199997
rect_min_size = Vector2( 100, 0 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
script = ExtResource( 2 )

[node name="TitleBG" type="NinePatchRect" parent="."]
margin_left = 4.0
margin_top = -6.0
margin_right = 96.0
margin_bottom = 12.0
mouse_filter = 1
texture = ExtResource( 8 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="LabelName" type="Label" parent="TitleBG"]
margin_right = 92.0
margin_bottom = 17.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "name"
align = 1
valign = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
texture = ExtResource( 7 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="MarginContainer" parent="VB"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="NinePatchRect" type="NinePatchRect" parent="VB/Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 80.0
mouse_filter = 1
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 49, 49 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 10

[node name="Sprite" type="TextureRect" parent="VB/Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 80.0
margin_bottom = 80.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Margin" type="MarginContainer" parent="VB"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 199.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VB" type="VBoxContainer" parent="VB/Margin"]
margin_left = 4.0
margin_top = 4.0
margin_right = 96.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="VB/Margin/VB"]
margin_right = 92.0
margin_bottom = 41.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 3 )
text = "Ipsum lorem"
align = 1
valign = 1
autowrap = true

[node name="LabelEffect" type="Label" parent="VB/Margin/VB"]
margin_top = 45.0
margin_right = 92.0
margin_bottom = 87.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 6 )
text = "Ipsum lorem "
align = 1
valign = 1
autowrap = true

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="." to="." method="_on_UpgradeButton_pressed"]
